--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "angular": "^1.6.9",
+    "bootstrap": "^4.0.0",
     "ejs": "2.5.7",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -17,11 +19,15 @@
     "grunt-contrib-uglify": "1.0.1",
     "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
+    "grunt-sass": "^2.1.0",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "izitoast": "^1.2.0",
     "rc": "1.0.1",
     "sails": "~0.12.14",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-hook-validation": "^0.4.7",
+    "waterline-sqlite3": "^50.0.0"
   },
   "scripts": {
     "debug": "node debug app.js",
