--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
     "izitoast": "^1.2.0",
+    "lodash": "^4.17.5",
     "rc": "1.0.1",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
